<resources>
    <string name="app_name">project</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="popular">Popular</string>
    <string name="order_and_eat"><![CDATA[Order & Eat]]></string>
    <string name="find_your_food">Find Your Food</string>
    <string name="profile_picture">Profile picture</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="send">Send</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="attachment">Attachment</string>
    <string name="support_chat">Support Chat</string>
    <string name="categories">Categories</string>
    <string name="hi_greeting">Hi %1$s</string>
    <string name="title_activity_banner_details">BannerDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="banner_image">Banner image</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total:</string>
    <string name="tax">Tax:</string>
    <string name="delivery_services">Delivery Services:</string>
    <string name="items_total">Items Total:</string>
    <string name="my_cart">My Cart</string>
    <string name="your_card_is_empty">Your Card Is Empty</string>
    <string name="title">Title</string>
    <string name="content_image">Content image</string>
    <string name="plus_button">Plus button</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="minus_button">Minus button</string>
    <string name="thank_you">Thank You Kak :)</string>
    <string name="payment_notice">Pemesanan dianggap batal jika tidak melakukan pembayaran selama 3 jam</string>
    <string name="logo_bri">Logo BRI</string>
    <string name="andalas_computer">ANDALAS COMPUTER</string>
    <string name="andalas">ANDALAS</string>
    <string name="computer">Computer</string>
    <string name="payment_notes">Harap transfer sesuai dengan nominal \"Total Harga\" ke rekening bank yang tertera di atas! Setelah transfer lakukan konfirmasi! Perbedaan nilai transfer akan menghambat proses verifikasi!</string>
    <string name="konfirmasi_pembayaran">Konfirmasi Pembayaran</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="nama">Nama</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="submit">Submit</string>
    <string name="notification">Notification</string>
    <string name="show_notification">Show Notification</string>
    <string name="notification_priority_summaryOff">Notifications will have normal priority</string>
    <string name="notification_priority_summaryOn">Notifications will have urgent priority</string>
    <string name="notification_priority_title">Urgent Notification</string>
    <string name="get_started">Get Started</string>
    <string name="btnSentPackage_contentDescription">Sent Packages Button</string>
    <string name="edit_profile">Edit Profile</string>

    <string-array name="jenis_pengiriman">
        <item>-- Jenis Pengiriman --</item>
        <item>JNE</item>
        <item>POS</item>
        <item>TIKI</item>
    </string-array>
    <string-array name="metode_pembayaran">
        <item>-- Metode Pembayaran --</item>
        <item>BRI</item>
        <item>BCA</item>
        <item>Mandiri</item>
        <item>BNI</item>
    </string-array>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
</resources>