<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/messages_header"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/notification"
        app:iconSpaceReserved="false" >

        <SwitchPreferenceCompat
            app:key="notification"
            app:title="@string/show_notification"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:dependency="notification"
            app:key="notification_priority"
            app:summaryOff="@string/notification_priority_summaryOff"
            app:summaryOn="@string/notification_priority_summaryOn"
            app:title="@string/notification_priority_title"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>