<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_fragment"
        android:title="@string/home"
        android:icon="@drawable/bottom_btn1"
        app:showAsAction="always" />

    <item
        android:id="@+id/profile_fragment"
        android:title="@string/profile"
        android:icon="@drawable/bottom_btn2"
        app:showAsAction="always"/>

    <item
        android:id="@+id/support_fragment"
        android:title="@string/support"
        android:icon="@drawable/bottom_btn3"
        app:showAsAction="always"/>

    <item
        android:id="@+id/settings_fragment"
        android:title="@string/settings"
        android:icon="@drawable/bottom_btn4"
        app:showAsAction="always"/>

</menu>