<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ShowDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="1dp"
        app:navigationIcon="@drawable/ic_arrow_left_black"
        android:theme="@style/Theme.Project"
        app:popupTheme="@style/Theme.AppCompat.DayNight"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="70dp"
            android:paddingTop="@dimen/space15">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Rp"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/foodPic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/nyk_g07"
                android:layout_margin="16dp"
                android:contentDescription="@string/content_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/minusBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:srcCompat="@drawable/minus"
                    android:contentDescription="@string/minus_button" />

                <TextView
                    android:id="@+id/numberOrderTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    tools:text="1"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/plusBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/plus"
                    android:contentDescription="@string/plus_button" />

            </LinearLayout>

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/description"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addToCardBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:text="@string/add_to_cart"
        android:background="@drawable/rounded_button_background"
        android:gravity="center"
        android:textSize="23sp"
        android:textStyle="bold"
        android:elevation="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>