<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CountdownPaymentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="1dp"
        app:navigationIcon="@drawable/ic_arrow_left_black"
        android:theme="@style/Theme.Project"
        app:popupTheme="@style/Theme.AppCompat.DayNight"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space15"
            android:orientation="vertical"
            android:paddingBottom="?attr/actionBarSize">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thank_you"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Angel Monica"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textAllCaps="true"
                android:fontFamily="serif"/>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:paddingBottom="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space15"
                android:layout_marginHorizontal="@dimen/space15"
                android:orientation="vertical"
                android:background="@drawable/rounded_primary_background">

                <TextView
                    android:layout_marginTop="@dimen/space15"
                    android:id="@+id/txtCountdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingVertical="@dimen/space10"
                    android:paddingHorizontal="@dimen/space15"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/pill_shape"
                    tools:text="03 : 00 : 00"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/colorPrimary"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/space10"
                    android:text="@string/payment_notice"
                    android:textColor="#ff00" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorOnPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imgLogoBRI"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/bri"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/logo_bri"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/imgLogoBRI"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/space5">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/andalas"
                                android:textColor="?attr/colorOnPrimary"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:layout_marginEnd="@dimen/space5"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/computer"
                                android:textAllCaps="true"
                                android:textSize="16sp"
                                android:textColor="?attr/colorOnPrimary"/>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?attr/colorOnPrimary" />

                        <TextView
                            android:id="@+id/txtRekening"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?attr/colorOnPrimary"
                            android:text="5657 9090 8889"
                            android:layout_marginTop="@dimen/space5"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorOnPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:text="@string/payment_notes"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnPrimary"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnConfirmPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#ff00"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:text="@string/konfirmasi_pembayaran"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>